fixing bg and spacing on home page

--- a/src/output.css
+++ b/src/output.css
@@ -1221,6 +1221,14 @@ input:checked + .toggle-bg {
   width: 100%;
 }
 
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-52 {
+  width: 13rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -1287,12 +1295,60 @@ input:checked + .toggle-bg {
   resize: both;
 }
 
+.auto-cols-\[minmax\(0\2c 2fr\)\] {
+  grid-auto-columns: minmax(0,2fr);
+}
+
+.auto-cols-\[minmax\(0\2c 4fr\)\] {
+  grid-auto-columns: minmax(0,4fr);
+}
+
+.auto-cols-\[minmax\(0\2c 5fr\)\] {
+  grid-auto-columns: minmax(0,5fr);
+}
+
+.auto-cols-\[minmax\(208px\2c 5fr\)\] {
+  grid-auto-columns: minmax(208px,5fr);
+}
+
+.auto-cols-\[minmax\(208px\2c 2fr\)\] {
+  grid-auto-columns: minmax(208px,2fr);
+}
+
+.auto-cols-\[minmax\(208px\2c 1fr\)\] {
+  grid-auto-columns: minmax(208px,1fr);
+}
+
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .grid-cols-7 {
   grid-template-columns: repeat(7, minmax(0, 1fr));
+}
+
+.grid-cols-2 {
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-cols-5 {
+  grid-template-columns: repeat(5, minmax(0, 1fr));
+}
+
+.grid-cols-\[repeat\(auto-fit\2c minmax\(250px\2c 1fr\)\)\] {
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+}
+
+.place-content-center {
+  place-content: center;
+}
+
+.place-items-center {
+  place-items: center;
+}
+
+.content-between {
+  align-content: space-between;
 }
 
 .items-start {
@@ -1325,6 +1381,14 @@ input:checked + .toggle-bg {
 
 .justify-evenly {
   justify-content: space-evenly;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1367,6 +1431,10 @@ input:checked + .toggle-bg {
 
 .border-0 {
   border-width: 0px;
+}
+
+.border-none {
+  border-style: none;
 }
 
 .border-blue-600 {
@@ -1435,6 +1503,26 @@ input:checked + .toggle-bg {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+}
+
+.bg-cover {
+  background-size: cover;
+}
+
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-center {
+  background-position: center;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.bg-repeat-round {
+  background-repeat: round;
 }
 
 .p-1 {
@@ -1509,6 +1597,16 @@ input:checked + .toggle-bg {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .font-medium {
@@ -1840,6 +1938,25 @@ input:checked + .toggle-bg {
 .dark\:focus\:ring-blue-500:focus:is(.dark *) {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(63 131 248 / var(--tw-ring-opacity, 1));
+}
+
+@media (min-width: 640px) {
+  .sm\:text-7xl {
+    font-size: 4.5rem;
+    line-height: 1;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:text-9xl {
+    font-size: 8rem;
+    line-height: 1;
+  }
+
+  .md\:text-gray-300 {
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+  }
 }
 
 .rtl\:rotate-180:where([dir="rtl"], [dir="rtl"] *) {
